tests/transpiler/x/java/typed_let.error
exit status 1
Main.java:5: error: non-static variable y cannot be referenced from a static context
        System.out.println(y);
                           ^
1 error
