tests/transpiler/x/java/typed_let.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 14:24:02 UTC
public class Main {
    public static void main(String[] args) {
        var y = 0;
        System.out.println(y);
    }
}
